k8s/app/kustomization/base/app-services.yaml
# --- User Service ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  namespace: lab5
spec:
  replicas: 1
  selector: { matchLabels: { app: user-service } }
  template:
    metadata:
      labels: { app: user-service }
    spec:
      containers:
      - name: user-service
        image: lab-app:v1
        imagePullPolicy: IfNotPresent
        command: ["python", "src/main.py"]
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-svc
  namespace: lab5
spec:
  selector: { app: user-service }
  ports:
  - port: 8000
    targetPort: 8000

# --- Stats Service ---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-service-deployment
  namespace: lab5
spec:
  replicas: 1
  selector: { matchLabels: { app: stats-service } }
  template:
    metadata:
      labels: { app: stats-service }
    spec:
      containers:
      - name: stats-service
        image: lab-app:v1
        imagePullPolicy: IfNotPresent
        command: ["python", "src/main.py", "--stats"]
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: stats-service-svc
  namespace: lab5
spec:
  selector: { app: stats-service }
  ports:
  - port: 8001
    targetPort: 8001
